--- a/src/components/style.css
+++ b/src/components/style.css
@@ -172,6 +172,7 @@ body{
   align-items: stretch;
   padding: 20px;
   height: 400px;
+  color: #fff;
   gap: 10px;
 }
 .aa{
@@ -237,9 +238,11 @@ body{
   color: #fff;
 }
 .ff{
-  padding: 20px 200px;
+  /* padding: 20px 200px; */
   color: #fff;
   transition: all 1.5s linear;
+  margin: 20px;
+  height: 600px;
 }
 .ff:hover{
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
